<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator Web Service</string>
    <string name="action_settings">Settings</string>
    <string name="operator1">Operator 1</string>
    <string name="operator2">Operator 2</string>
    <string name="operation">Operation</string>
    <string name="method">Method</string>
    <string name="display_result">Display Result</string>
    <string-array name="operations">
        <item>addition</item>
        <item>substraction</item>
        <item>multiplication</item>
        <item>division</item>
    </string-array>
        <string-array name="methods">
        <item>GET</item>
        <item>POST</item>
    </string-array>
        <string name="plus">Plus</string>
        <string name="mul">Mul</string>
        <string name="port">Port Server</string>

</resources>
