<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.pdsd.practicaltest02.PracticalTest02MainActivity" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="2" >
        
     <EditText
         android:id="@+id/operator1_edit_text"
         android:layout_width="149dp"
         android:layout_height="wrap_content"
         android:layout_column="0"
         android:layout_row="0"
         android:hint="@string/operator1"
         android:inputType="number" />
     
     <EditText
         android:id="@+id/operator2_edit_text"
         android:layout_width="155dp"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_row="0"
         android:hint="@string/operator2"
         android:inputType="number" />
        
        <Button
            android:id="@+id/button1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/plus" />
        
        <TextView
            android:id="@+id/plus_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1" />
        
        <Button
            android:id="@+id/button2"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/mul" />
        
        <TextView
            android:id="@+id/mul_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2" />
        
        <TextView
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="PORT" />
        
        <TextView
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|top"
            android:layout_row="3"
            android:hint="@string/port"
            android:text="4000" />
        
    </GridLayout>
</LinearLayout>
